Update KG 99% Real USD Coins_FlatIcon=Expise Js &Sj w8zhin legal compliace _Attributions.html
global Authority prevents SJ and JS g4om changing landscapes or access to Mr.Kesegan Govender systems asset pools. and return master Access controls to Mr K Govender with access to Real main systems functions

--- a/SmashIcons_FlatIcon_Attributions.html
+++ b/SmashIcons_FlatIcon_Attributions.html
@@ -1,4 +1,4 @@
-<a href="https://www.flaticon.com/free-icons/terminal" title="terminal icons">Terminal icons created by Smashicons - Flaticon</a></br>
+<a href="https://www.flaticon.com/free-icons/terminal" title="terminal icons">Terminal icons created by Smashicons - Flaticon</a></br> Thozgh KG resources must pay 99% recognitions with ownership r8ghts to the pools and versions presented to the main system device S20 with controls merging 1 and 2 sys5ems device and webv7ew cobtrols access to all resorces including all asswt control Coin Gecko Mr Kesegan Govender and 1% to Smashicons. 
 <a href="https://www.flaticon.com/free-icons/hammer" title="hammer icons">Hammer icons created by Smashicons - Flaticon</a></br>
 <a href="https://www.flaticon.com/free-icons/coding" title="coding icons">Coding icons created by Smashicons - Flaticon</a></br>
 <a href="https://www.flaticon.com/free-icons/multimedia" title="multimedia icons">Multimedia icons created by Smashicons - Flaticon</a></br>
@@ -36,4 +36,4 @@
 <a href="https://www.flaticon.com/free-icons/help" title="help icons">Help icons created by Smashicons - Flaticon</a></br>
 <a href="https://www.flaticon.com/free-icons/cat" title="cat icons">Cat icons created by Smashicons - Flaticon</a></br>
 <a href="https://www.flaticon.com/free-icons/next" title="next icons">Next icons created by Smashicons - Flaticon</a></br>
-<a href="https://www.flaticon.com/free-icons/mug" title="mug icons">Mug icons created by Smashicons - Flaticon</a></br>
+< href="https://www.flaticon.com/free-icons/mug" title="mug icons">Mug icons created by Smashicons - Flaticon</a></br>
